--- a/app/src/main/res/layout/activity_lucky_number.xml
+++ b/app/src/main/res/layout/activity_lucky_number.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
         android:text="@string/txt_show_number"
+        android:fontFamily="@font/frenkilin"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="40sp"
@@ -27,6 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="96dp"
         android:text="888"
+        android:fontFamily="@font/frenkilin"
         android:textColor="@color/black"
         android:textSize="60sp"
         app:layout_constraintEnd_toEndOf="parent"
