--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="132dp"
         android:text="@string/text_welcome"
+        android:fontFamily="@font/frenkilin"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="40sp"
